--- a/eCommerceAssets/styles/eCommerceStyle.css
+++ b/eCommerceAssets/styles/eCommerceStyle.css
@@ -361,12 +361,6 @@ hr .signup-form {
     margin-bottom: 21px;
 }
 
-/* Whole page content */
-#mainWrapper {
-    width: 80%;
-    padding-left: 10%;
-}
-
 /*menu elements */
 .menu ul li {
     list-style-type: none;
@@ -374,6 +368,14 @@ hr .signup-form {
     position: relative;
     left: -35px;
     padding-top: 12px;
+}
+.productInfo{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 5px;
+  padding-top: 9px;
+  min-height: 500px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Product rows for catalog */
@@ -577,12 +579,19 @@ footer .footerlinks {
     }
 
     /* main content region of page */
-    #mainWrapper #content .mainContent {
+      #content .mainContent {
         overflow: hidden;
         width: 95%;
         margin-top: 40px;
     }
-
+    .productInfo{
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      max-width: 300px;
+      height: 400px;
+      margin: 30px;
+      text-align: center;
+      font-family: arial;
+    }
     /* Prices of products in catalog view */
     .productRow .productInfo .price {
         font-size: 19px;
