--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,4 +1,5 @@
 @import "styles.css";
+@import "eCommerceAssets/styles/eCommercestyle.css";
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Ubuntu:wght@300&display=swap');
 
